# formital_CIP

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: auth.py
apps/api/app/core/: __init__.py  config.py  security.py
apps/api/app/schemas/: auth.py
apps/api/app/services/: supabase_auth.py
apps/api/tests/: test_auth_contract.py
apps/web/: middleware.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/forgot-password/: page.tsx
apps/web/app/inactive/: page.tsx
apps/web/app/login/: page.tsx
apps/web/types/: auth.ts
docs/: authentication.md
scripts/: admin-module.test.mjs  audit-cip-data.mjs  auth-phase.test.mjs  cip-consistency.test.mjs  create-auth-users.mjs  responsive-ui.test.mjs  start-web.command  validate-auth-phase.mjs
supabase/: config.toml  seed.sql
supabase/migrations/: 20260705000100_initial_digital_cip_schema.sql  20260712000050_add_admin_app_role_enum.sql  20260712000100_auth_roles_profiles.sql  20260712000200_operator_alert_insert_policy.sql  20260712000300_operator_planned_cycle_access.sql  20260713000100_cycle_consistency_guards.sql  20260713000200_equipment_status_consistency.sql  20260713000300_alert_resolution_workflow.sql  20260713000400_cycle_status_values.sql  20260713000500_planned_cycle_workflow.sql  20260713000600_admin_user_management.sql  20260714000100_start_cip_cycle_rpc.sql  20260714000200_cip_solutions_and_concentrations.sql
(+74 files in other folders)
